http: expose node delete api; resolves #622
